[package]
name = "cortex-a"
version = "1.0.0"
authors = ["Andre Richter <andre.o.richter@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Low level access to Cortex-A processors"
documentation = "https://docs.rs/cortex-a"
keywords = ["arm", "aarch64", "cortex-a", "register"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/andre-richter/cortex-a"

[dependencies]
register = { git = "https://github.com/andre-richter/register-rs.git" }
